# 20260512-newsCollector-chatgpt

./: .env.example  .gitignore  Daily_AI_Insights_SRS_v2.md  README.md  pyproject.toml  requirements.txt
.github/workflows/: daily.yml  fetch.yml  process.yml  publish.yml
config/: prompts.yaml  scoring.yaml  settings.yaml  sources.yaml
data/archive/: index.json  latest.json
docs/: 404.html  archive.html  feed.xml  index.html  robots.txt  search-index.json  sitemap.xml
docs/archive/2026-05-12/: index.html
docs/assets/: app.js
scripts/: run_pipeline.py
src/: config.py  models.py
src/agent/: discovery.py  evaluator.py  source_expander.py
src/ai/: client.py
src/cost/: budget.py
src/emailer/: sender.py
src/observability/: alerts.py  logger.py  metrics.py
src/pipeline/: collector.py  deduplicator.py  formatter.py  normalizer.py  publisher.py  scorer.py  summarizer.py
src/recovery/: fallback.py  retry.py
src/storage/: archive.py  db.py
src/trend/: narrative.py  policy_radar.py  topics.py
templates/email/: email_html.html  email_plain.txt
templates/portal/: 404.html  _base.html  archive.html  article.html  index.html
templates/portal/assets/: style.css
tests/: conftest.py  test_deduplicator.py  test_normalizer.py  test_pipeline_smoke.py  test_publisher.py  test_scorer.py
tests/fixtures/: sample_items.json
