[project]
name = "daily-ai-insights"
version = "2.0.0"
description = "AI 產業每日決策情報系統 — Daily AI Insights"
requires-python = ">=3.11"
readme = "README.md"
authors = [{ name = "Captain Balung" }]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra -q"
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]
